add headlines to main

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
   <body>
     <main>
       <header></header>
+      <div class="headlines">
+        <h1>Our process</h1>
+        <p>Easy And Perfect Solution For Your Business App</p>
+      </div>
     </main>
     <!-- 
     Easy And Perfect Solution For Your Business App,
