change headlines from top main to grid container

--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
   <body>
     <main>
       <header></header>
-      <div class="headlines">
-        <h1>Our process</h1>
-        <p>Easy And Perfect Solution For Your Business App</p>
-      </div>
+      <section class="container">
+        <div class="headlines">
+          <h1>Our process</h1>
+          <p>Easy And Perfect Solution For Your Business App</p>
+        </div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="content"></div>
+      </section>
     </main>
     <!-- 
     Easy And Perfect Solution For Your Business App,
