add content to grid items plus changing name of class of grid items

--- a/index.html
+++ b/index.html
@@ -21,30 +21,39 @@
           <h1>Our process</h1>
           <p>Easy And Perfect Solution For Your Business App</p>
         </div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
-        <div class="content"></div>
+        <div class="container-content">
+          <img src="resources/process-icon-1.svg" alt="" />
+          <p>47+ Components</p>
+          <p>
+            Save time and build products with well-organized and customizable
+            desktop components for Figma.
+          </p>
+        </div>
+        <div class="container-content">
+          <img src="resources/process-icon-2.svg" alt="" />
+          <p>Documentation</p>
+          <p>
+            Developer handoff made easy. Component and style guide documentation
+            for your team in one place.
+          </p>
+        </div>
+        <div class="container-content">
+          <img src="resources/process-icon-3.svg" alt="" />
+          <p>Design faster</p>
+          <p>
+            Stop wasting time on creating everything from scratch for every new
+            project you start.
+          </p>
+        </div>
+        <div class="container-content">
+          <img src="resources/process-icon-4.svg" alt="" />
+          <p>Customize</p>
+          <p>
+            Easily apply your branding by changing font, color and component
+            properties.
+          </p>
+        </div>
       </section>
     </main>
-    <!-- 
-    Easy And Perfect Solution For Your Business App,
-
-    47+ Components 
-
-    Save time and build products with well-organized and customizable desktop components for Figma.
-
-    Documentation
-
-    Developer handoff made easy. Component and style guide documentation for your team in one place.
-
-    Design faster
-
-    Stop wasting time on creating everything from scratch for every new project you start.
-
-    Design faster
-
-    Easily apply your branding by changing font, color and component properties.
-    -->
   </body>
 </html>
