add style to container content

--- a/index.html
+++ b/index.html
@@ -23,34 +23,35 @@
         </div>
         <div class="container-content">
           <img src="resources/process-icon-1.svg" alt="" />
-          <p>47+ Components</p>
+          <h3>47+ Components</h3>
           <p>
-            Save time and build products with well-organized and customizable
+            Save time and build products with
+            <strong class="purple">well-organized and customizable</strong>
             desktop components for Figma.
           </p>
         </div>
         <div class="container-content">
           <img src="resources/process-icon-2.svg" alt="" />
-          <p>Documentation</p>
+          <h3>Documentation</h3>
           <p>
             Developer handoff made easy. Component and style guide documentation
-            for your team in one place.
+            for your team in <strong class="purple">one place</strong>.
           </p>
         </div>
         <div class="container-content">
           <img src="resources/process-icon-3.svg" alt="" />
-          <p>Design faster</p>
+          <h3>Design faster</h3>
           <p>
-            Stop wasting time on creating everything from scratch for every new
-            project you start.
+            Stop wasting time on creating everything from scratch for
+            <strong class="purple">every new project</strong> you start.
           </p>
         </div>
         <div class="container-content">
           <img src="resources/process-icon-4.svg" alt="" />
-          <p>Customize</p>
+          <h3>Customize</h3>
           <p>
-            Easily apply your branding by changing font, color and component
-            properties.
+            Easily apply your branding by changing font, color and
+            <strong class="purple">component properties.</strong>
           </p>
         </div>
       </section>
