refactor: changing html structure

--- a/index.html
+++ b/index.html
@@ -16,43 +16,47 @@
   <body>
     <main>
       <header></header>
-      <section class="container">
+
+      <section>
         <div class="headlines">
           <h1>Our process</h1>
           <p>Easy And Perfect Solution For Your Business App</p>
         </div>
-        <div class="container-content">
-          <img src="resources/process-icon-1.svg" alt="" />
-          <h3>47+ Components</h3>
-          <p>
-            Save time and build products with
-            <strong class="purple">well-organized and customizable</strong>
-            desktop components for Figma.
-          </p>
-        </div>
-        <div class="container-content">
-          <img src="resources/process-icon-2.svg" alt="" />
-          <h3>Documentation</h3>
-          <p>
-            Developer handoff made easy. Component and style guide documentation
-            for your team in <strong class="purple">one place</strong>.
-          </p>
-        </div>
-        <div class="container-content">
-          <img src="resources/process-icon-3.svg" alt="" />
-          <h3>Design faster</h3>
-          <p>
-            Stop wasting time on creating everything from scratch for
-            <strong class="purple">every new project</strong> you start.
-          </p>
-        </div>
-        <div class="container-content">
-          <img src="resources/process-icon-4.svg" alt="" />
-          <h3>Customize</h3>
-          <p>
-            Easily apply your branding by changing font, color and
-            <strong class="purple">component properties.</strong>
-          </p>
+        <div class="container">
+          <div class="container-content">
+            <img src="resources/process-icon-1.svg" alt="" />
+            <h3>47+ Components</h3>
+            <p>
+              Save time and build products with
+              <strong class="purple">well-organized and customizable</strong>
+              desktop components for Figma.
+            </p>
+          </div>
+          <div class="container-content">
+            <img src="resources/process-icon-2.svg" alt="" />
+            <h3>Documentation</h3>
+            <p>
+              Developer handoff made easy. Component and style guide
+              documentation for your team in
+              <strong class="purple">one place</strong>.
+            </p>
+          </div>
+          <div class="container-content">
+            <img src="resources/process-icon-3.svg" alt="" />
+            <h3>Design faster</h3>
+            <p>
+              Stop wasting time on creating everything from scratch for
+              <strong class="purple">every new project</strong> you start.
+            </p>
+          </div>
+          <div class="container-content">
+            <img src="resources/process-icon-4.svg" alt="" />
+            <h3>Customize</h3>
+            <p>
+              Easily apply your branding by changing font, color and
+              <strong class="purple">component properties.</strong>
+            </p>
+          </div>
         </div>
       </section>
     </main>
