final but not glad

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <main>
       <header></header>
       <section class="container">
-        <div class="headlines">
+        <div class="container-content headlines">
           <h1>Our process</h1>
           <p>Easy And Perfect Solution For Your Business App</p>
         </div>
+
         <div class="container-content">
           <img src="resources/process-icon-1.svg" alt="" />
           <h3>47+ Components</h3>
@@ -35,7 +36,8 @@
           <h3>Documentation</h3>
           <p>
             Developer handoff made easy. Component and style guide documentation
-            for your team in <strong class="purple">one place</strong>.
+            for your team in
+            <strong class="purple">one place</strong>.
           </p>
         </div>
         <div class="container-content">
